--- a/css/淘宝静态页面.css
+++ b/css/淘宝静态页面.css
@@ -1,1 +1,64 @@
-@import "reset.css"
+@import "reset.css";
+
+@font-face {
+    font-family: 'iconfont';
+    src: url('../font/iconfont.eot');
+    src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'),
+        url('../font/iconfont.woff2') format('woff2'),
+        url('../font/iconfont.woff') format('woff'),
+        url('../font/iconfont.ttf') format('truetype'),
+        url('../font/iconfont.svg#iconfont') format('svg');
+}
+
+.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/* 头部信息 */
+#head-message li {
+    float: left;
+    line-height: 35px;
+    padding: 0 6px;
+    font-size: 0;
+}
+
+
+#head-message a {
+    color: #6c6c6c;
+    font-size: 12px;
+}
+#head-message li a:hover span{
+    color: #f40;
+}
+
+/* 登录 */
+#head-message a.login {
+    color: #f22e00;
+}
+
+/* 小图标 */
+#head-message span {
+    font-size: 12px;
+}
+
+/* 下拉箭头 */
+#head-message span.arrow {
+    margin-left: 7px;
+}
+
+/* 购物车数量 */
+#head-message li strong{
+    font-size: 12px;
+    color:#f22e00 ;
+}
+
+/* 分隔竖线 */
+#head-message li.line{
+    font-size: 12px;
+    color: #ddd;
+    padding: 0 5px;
+}
