--- a/css/muster.css
+++ b/css/muster.css
@@ -1,4 +1,5 @@
 @import "./reset.css";
 @import "./head-message.css";
 @import "./head-ad.css";
-@import "./head-search.css"
+@import "./head-search.css";
+@import "./nav.css"
