板块划分,基础结构

--- a/css/muster.css
+++ b/css/muster.css
@@ -2,4 +2,5 @@
 @import "./head-message.css";
 @import "./head-ad.css";
 @import "./head-search.css";
-@import "./nav.css"
+@import "./nav.css";
+@import "./first-screen.css";
