--- a/css/first-screen.css
+++ b/css/first-screen.css
@@ -4,7 +4,7 @@
 #first-screen .first-left {
     width: 890px;
     height: 621px;
-    background-color: rgba(8, 236, 248, 0.3);
+    /* background-color: rgba(8, 236, 248, 0.3); */
 }
 
 /* 左板块-左侧导航 */
@@ -136,13 +136,65 @@
 #first-screen .banner2 {
     /* position: absolute; */
     width: 690px;
-    height: 230px;
+    height: 220px;
     background-color: #ccc;
     margin-top: 10px;
 }
 
+#first-screen .banner2 .pic-title{
+    height: 20px;
+}
+#first-screen .banner2 .pic-title .text{
+    height: 17px;
+    line-height: 17px;
+}
 
+#first-screen .banner2 .pic-title .text .bg{
+    background: url(../images/title_bg.png) no-repeat left;
+    padding-left: 136px;
+    color:#666;
+}
+#first-screen .banner2 .pic-title .text i{
+    color: #ff1648;
+}
 
+#first-screen .banner2 .line{
+    position: relative;
+    height: 3px;
+    background-color: #ff1648;
+}
+#first-screen .banner2 .line span{
+    position: absolute;
+    left: 0;
+    width: 87px;
+    height: 3px;
+    background-color: #000;
+}
+
+#first-screen .banner2 .img-box{
+    width: 520px;
+    height: 200px;
+    background-color: #fff;
+    position: relative;
+    font-size: 0;
+    display: table-cell;
+    vertical-align: middle;
+    
+    /* 弹性盒模型 */
+    /* display: flex;
+    justify-content: space-around;
+    align-items: center; */
+}
+
+#first-screen .banner2 .img-box img{
+    margin: 0 10px;
+}
+
+#first-screen .banner2 .ad .title{
+    height: 20px;
+    line-height: 20px;
+    color: #a5a5a5;
+}
 
 
 
