--- a/css/reset.css
+++ b/css/reset.css
@@ -46,6 +46,8 @@ body {
     font: 12px/1.5 tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53', sans-serif;
     color: #3c3c3c;
     background-color: #f4f4f4;
+    position: relative;
+    z-index: -900;
 }
 
 /* 预定义样式 */
