--- a/css/muster.css
+++ b/css/muster.css
@@ -4,3 +4,5 @@
 @import "./head-search.css";
 @import "./nav.css";
 @import "./first-screen.css";
+@import "./first-screen-news.css";
+@import "./first-screen-first-right.css";
