右侧用户区域

--- a/css/first-screen-first-right.css
+++ b/css/first-screen-first-right.css
@@ -1,6 +1,102 @@
 /* 右板块 */
 #first-screen .first-right {
     width: 290px;
-    height: 621px;
+    /* height: 621px; */
+    margin-top: 10px;
     background-color: #000;
 }
+
+/* 用户 */
+#first-screen .first-right .user {
+    width: 290px;
+    height: 140px;
+    background-image: url(../images/user_bg.png);
+    padding-top: 5px;
+}
+
+/* 用户头像 */
+#first-screen .first-right .user .avatar {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#first-screen .first-right .user .avatar img {
+    width: 50px;
+    height: 50px;
+}
+
+/* 用户头像下方文字(登录后为用户名) */
+#first-screen .first-right .user .username {
+    text-align: center;
+    line-height: 16px;
+}
+
+#first-screen .first-right .user .members {
+    text-align: center;
+    font-size: 0;
+    /* 先设置0消除空隙,后面再单独设置大小使其显示 */
+}
+
+/* 淘金币/会员俱乐部 */
+#first-screen .first-right .user .members a {
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 9px;
+    /* background-color: #ffe4dc; */
+    padding: 0 10px 0 20px;
+    margin: 0 2px;
+}
+
+#first-screen .first-right .user .members a.gold {
+    background: #ffe4dc url(../images/ico.png) 0 -572px no-repeat;
+}
+
+#first-screen .first-right .user .members a.club {
+    background: #ffe4dc url(../images/ico.png) 0 -528px no-repeat;
+}
+
+/* 登录/注册/开店 按钮 */
+#first-screen .first-right .user .btn {
+    text-align: center;
+}
+
+#first-screen .first-right .user .btn button {
+    width: 75px;
+    height: 25px;
+    line-height: 25px;
+    margin: 12px 2px 0 2px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 4px;
+    background-image: linear-gradient(to right,#ff5000,#ff6f06);
+     /* IE兼容 */
+     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5000',endColorstr='#ff6f06',GradientType=1);
+}
+
+/* 登录按钮比其它两个宽 */
+#first-screen .first-right .user .btn button.login{
+    width: 92px;
+}
+
+/* 举报 */
+#first-screen .first-right .tip-off{
+    display: block;
+    height: 26px;
+    line-height: 26px;
+    color: #f40;
+    background-color: #ffe4dc;
+    text-align: center;
+}
+
+#first-screen .first-right .tip-off i{
+    font-size: 12px;
+    vertical-align: 1px;
+    position: relative;
+    left: 30px;
+}
+
