--- a/css/muster.css
+++ b/css/muster.css
@@ -6,3 +6,4 @@
 @import "./first-screen.css";
 @import "./first-screen-news.css";
 @import "./first-screen-first-right.css";
+@import "./first-screen-notice.css";
