图标区域结构样式

--- a/css/muster.css
+++ b/css/muster.css
@@ -7,3 +7,4 @@
 @import "./first-screen-news.css";
 @import "./first-screen-first-right.css";
 @import "./first-screen-notice.css";
+@import "./first-screen-table-icon.css";
