--- a/css/muster.css
+++ b/css/muster.css
@@ -8,3 +8,5 @@
 @import "./first-screen-first-right.css";
 @import "./first-screen-notice.css";
 @import "./first-screen-table-icon.css";
+@import "./second-screen.css";
+@import "./right-fixed-nav.css";
