右侧固定导航

--- a/css/reset.css
+++ b/css/reset.css
@@ -98,6 +98,13 @@ body {
     color: #9c9c9c;
 }
 
+.c6{
+    color: #8d7afb;
+}
+.c7{
+    color: #a8c001;
+}
+
 .mr-5 {
     margin-right: 5px;
 }
